; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_app-helpers.c_open_app_map.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_app-helpers.c_open_app_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@path_format = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @open_app_map(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32, i32* @MAX_PATH, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i32, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = call i32 (...) @WTSGetActiveConsoleSessionId()
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* @MAX_PATH, align 4
  %14 = load i32, i32* @path_format, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32*, i32** %3, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @_snwprintf(i32* %11, i32 %13, i32 %14, i32 %15, i32* %16, i32* %17)
  %19 = call i32 @nt_open_map(i32* %11)
  %20 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %20)
  ret i32 %19
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @WTSGetActiveConsoleSessionId(...) #2

declare dso_local i32 @_snwprintf(i32*, i32, i32, i32, i32*, i32*) #2

declare dso_local i32 @nt_open_map(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
